# otus_python_basic

./: README.md
day_1/: main.py
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  pyproject.toml  requirements.txt
homework_03/fastapi_proj/: items_views.py  main.py  models_views.py  users_views.py
homework_03/fastapi_proj/users/: api.py  crud.py  dependencies.py  models.py
homework_04/: config.py  jsonplaceholder_requests.py  main.py  models.py  pyproject.toml  requirements.txt
homework_04/alembic/: env.py
homework_04/alembic/versions/: dd92c686279e_create_posts_and_users_tables.py
homework_04/models/: __init__.py  base.py  mixins.py  post.py  user.py
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
homework_06/: README.md  docker-compose.yaml  requirements.txt
homework_06/car_service_app/: app.py  config.py
homework_06/car_service_app/migrations/versions/: 659062c95111_add_description_and_image_fields_to_.py  997f642564e7_add_services_table.py
homework_06/car_service_app/models/: __init__.py  service.py
homework_06/car_service_app/static/js/: serviceDetails.js
homework_06/car_service_app/templates/: base.html  index.html
homework_06/car_service_app/views/: services.py
homework_06/docker-build/car_service/: Dockerfile
homework_07/: README.md
homework_07/bank/bank/: settings.py  urls.py
homework_07/bank/clients/: admin.py  models.py  urls.py  views.py
old_releases/day_2/: main.py  main_jup.ipynb
(+14 files in other folders)
