[tool.poetry]
name = "homework_03"
version = "0.1.0"
description = "homework_03 project"
authors = ["avo888 <avoevodin8888@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
