#poetry export -f requirements.txt --output requirements.txt --without-hashes
[tool.poetry]
name = "homework_04"
version = "0.1.0"
description = ""
authors = ["avo888 <avoevodin8888@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
SQLAlchemy = {extras = ["postgresql_asyncpg"], version = "^1.4.36"}
alembic = "^1.7.7"
pg8000 = "^1.29.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
requests = "^2.27.1"
Faker = "^13.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
